[package]
name = "rust-pgdatadiff"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Rust library for comparing two PostgreSQL databases"
readme = "README.md"
homepage = "https://github.com/pavlospt/rust-pgdatadiff"
repository = "https://github.com/pavlospt/rust-pgdatadiff"
keywords = ["postgres", "postgresql", "diff"]
documentation = "https://docs.rs/rust-pgdatadiff"

[workspace]
members = ["rust-pgdatadiff-client"]

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
futures = { version = "0.3.30", default-features = true, features = [
    "async-await",
] }
async-trait = "0.1.81"
pretty_assertions = "1.4.0"
mockall = "0.12.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
cargo-nextest = "0.9.72"
deadpool-postgres = "0.14.0"
postgres-native-tls = "0.5.0"
native-tls = "0.2.12"
rust-pgdatadiff = { path = ".", version = "0.1.6" }

[dependencies]
anyhow.workspace = true
tokio.workspace = true
colored.workspace = true
futures.workspace = true
async-trait.workspace = true
pretty_assertions.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
cargo-nextest.workspace = true
deadpool-postgres.workspace = true
postgres-native-tls.workspace = true
native-tls.workspace = true

[dependencies.clap]
version = "4.5.9"
features = ["derive"]

[dev-dependencies]
mockall.workspace = true
tokio.workspace = true

[lib]
test = true
edition = "2021"
crate-type = ["lib"]
name = "rust_pgdatadiff"
