[package]
name = "rust-pgdatadiff"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "Rust library for comparing two PostgreSQL databases"
readme = "README.md"
homepage = "https://github.com/pavlospt/rust-pgdatadiff"
repository = "https://github.com/pavlospt/rust-pgdatadiff"
keywords = ["postgres", "postgresql", "diff"]
documentation = "https://docs.rs/rust-pgdatadiff"

[workspace]
members = ["rust-pgdatadiff-client"]

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
colored = "3.0.0"
futures = { version = "0.3.31", default-features = true, features = [
    "async-await",
] }
async-trait = "0.1"
pretty_assertions = "1.4"
mockall = "0.13"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
cargo-nextest = "0.9.92"
deadpool-postgres = "0.14.1"
postgres-native-tls = "0.5.1"
native-tls = "0.2.14"
bon = "3.5"
rust-pgdatadiff = { path = ".", version = "0.1.7" }

[dependencies]
anyhow.workspace = true
tokio.workspace = true
colored.workspace = true
futures.workspace = true
async-trait.workspace = true
pretty_assertions.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
cargo-nextest.workspace = true
deadpool-postgres.workspace = true
postgres-native-tls.workspace = true
native-tls.workspace = true
bon.workspace = true

[dependencies.clap]
version = "4.5.34"
features = ["derive"]

[dev-dependencies]
mockall.workspace = true
tokio.workspace = true

[lib]
test = true
edition = "2021"
crate-type = ["lib"]
name = "rust_pgdatadiff"
