[package]
name = "rust-pgdatadiff-client"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "Rust client for comparing two PostgreSQL databases"
readme = "../README.md"
homepage = "https://github.com/pavlospt/rust-pgdatadiff"
repository = "https://github.com/pavlospt/rust-pgdatadiff"
keywords = ["postgres", "postgresql", "diff", "comparison"]
documentation = "https://docs.rs/rust-pgdatadiff-client"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"], optional = true }
tokio = "1.37.0"
env_logger = "0.11.3"
rust-pgdatadiff = { version = "0.1.3", path = ".." }
inquire = { version = "0.7.4", optional = true }

[features]
default = ["with-inquire"]
with-inquire = ["dep:inquire"]
with-clap = ["dep:clap"]
