[package]
name = "rust-pgdatadiff-client"
version = "0.1.14"
edition = "2021"
license = "MIT"
description = "Rust client for comparing two PostgreSQL databases"
readme = "../README.md"
homepage = "https://github.com/pavlospt/rust-pgdatadiff"
repository = "https://github.com/pavlospt/rust-pgdatadiff"
keywords = ["postgres", "postgresql", "diff", "comparison"]
documentation = "https://docs.rs/rust-pgdatadiff-client"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
rust-pgdatadiff.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
clap = { version = "4.5.26", features = ["derive"], optional = true }
inquire = { version = "0.7.5", optional = true }

[features]
default = ["with-inquire"]
with-inquire = ["dep:inquire"]
with-clap = ["dep:clap"]
